--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MPL-2.0",
+  "scripts": {
+    "dev": "tsc && ./dist/index.js"
+  },
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash": "^4.17.10",
     "tslint": "^5.9.1",
     "typescript": "^2.8.3"
   }
