--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "dev": "tsc && ./dist/index.js"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.108",
+    "@types/lowdb": "^1.0.1",
+    "@types/node": "^10.0.0",
     "axios": "^0.18.0",
     "lodash": "^4.17.10",
+    "lowdb": "^1.0.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.3"
   }
