--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MPL-2.0",
   "scripts": {
-    "dev": "tsc && ./dist/index.js"
+    "dev": "tsc && node ./dist/index.js"
   },
   "dependencies": {
     "@types/lodash": "^4.14.108",
